65Demo/src/objects/Cloud_Document__c.object
<CustomObject>
    <description>This object captures the metadata of the file uploaded and the URL to the external storage solution solution.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the uploaded file.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedToId__c</fullName>
        <description>SFDC record id to which the uploaded file will be associated with.</description>
        <label>RelatedToId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_File_Path__c</fullName>
        <description>Full URL of the file uploaded.</description>
        <label>File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cd_File_Type__c</fullName>
        <label>File Type</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cd_Size__c</fullName>
        <description>Size of the uploaded file.</description>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cloud Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>